# reaction_web

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  example.py  molecule.py  path.py  pyproject.toml  reaction.py  setup.cfg  test_web.py  web.py
.github/workflows/: publish-docker.yml  test.yml
examples/: h2_production.py  r_group_heatmap.py
reaction_web/: __init__.py  _typing.py  chem_translate.py  enumeration.py  molecule.py  path.py  plot.py  reaction.py  test_web.py  web.py
reaction_web/plot/: diagram.py  heatmap.py
reaction_web/tools/: generate_paths.py  generate_webs.py  helper.py
test/: test_reaction.py  test_web.py
tests/: test_chem_translate.py  test_enumeration.py  test_molecule.py  test_path.py  test_plot.py  test_reaction.py  test_web.py
tests/data/: enum_2_2_2.csv  enum_2_3.csv  enum_2_3_2_3_4.csv  enum_3_4_3.csv  gen_data.py
tests/plot/: __init__.py  test_diagram.py  test_heatmap.py
tests/tools/: data.csv  r_group_data.csv  test_generate_paths.py  test_generate_webs.py  test_helper.py
