[tool.poetry]
name = "reaction_web"
version = "0.3.0"
description = "Reaction path plotter"
authors = ["Jonathon Vandezande"]
keywords = ["chemistry", "reaction", "plotting"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jevandezande/reaction_web"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
matplotlib = "*"
more-itertools = "*"
natsort = "*"
numpy = "*"

[tool.poetry.group.dev.dependencies]
black = "==23.1"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
files = ["reaction_web", "examples", "tests"]
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
