[tool.poetry]
name = "reaction_web"
version = "0.4.0"
description = "Reaction path plotter"
authors = ["Jonathon Vandezande"]
keywords = ["chemistry", "reaction", "plotting"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jevandezande/reaction_web"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
matplotlib = "*"
more-itertools = "*"
natsort = "*"
numpy = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pre-commit = "*"
ruff = ">=0.3"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.mypy]
files = ["reaction_web", "examples", "tests"]
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests", "reaction_web"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
markers = [ "graphical: marks tests as graphical (typically slow)" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
