[metadata]
name = Reaction Web
description = Reaction path plotter
author = Jonathon Vandezande
version =
url = git@github.com:jevandezande/reaction_web.git
long_description = file: README.md
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.10
test_suite = tests/

[flake8]
ignore = E203, E266, E501, W503, E731
max-line-length = 120
max-complexity = 18
select = B, C, E, F, W, T4

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 120

[mypy]
files = reaction_web,  tests
ignore_missing_imports = true

[tool:pytest]
testpaths = tests/
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE

[pylint]
max-line-length = 120

[pylint:messages_control]
disable = C0330, C0326
